# pulumi-poetry-sub-projects-error

./: .gitignore  Pulumi.yaml  __main__.py  pyproject.toml
deployable/: pyproject.toml  requirements.txt
shared-libs/first-shared/: pyproject.toml
shared-libs/second-shared/: pyproject.toml
