[tool.poetry]
name = "deployable"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
first-shared = "*"
second-shared = "*"

[tool.poetry.dev-dependencies]
first-shared = { path="../shared-libs/first-shared", develop=true }
second-shared = { path="../shared-libs/second-shared", develop=true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
